--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
       content="default-src 'self'; script-src 'self' 'unsafe-inline'; connect-src *;"
     />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Fire Sale</title>
+    <title>MkEdit</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
